# ompl

./: .gitignore  .gitmodules
ompl_pinocchio_integration/: CMakeLists.txt  file.txt
ompl_pinocchio_integration/cmake/: FindOMPL.cmake  FindPinocchio.cmake
ompl_pinocchio_integration/examples/: intro_pinocchio_manual.cpp  pinocchio_ompl_planning.cpp
ompl_pinocchio_integration/include/: Motion_Planner.hpp  Robot_Model.hpp
ompl_pinocchio_integration/models/panda_description/urdf/: env.dae  panda1.urdf
ompl_pinocchio_integration/src/: Motion_Planner.cpp  Robot_Model.cpp  main.cpp
omplapp-1.6.0-Source/: CMakeLists.txt  tests
omplapp-1.6.0-Source/CMakeModules/: Findtinyxml2.cmake
omplapp-1.6.0-Source/doc/markdown/: releaseNotes.md
omplapp-1.6.0-Source/gui/: ompl_app_dev.py
omplapp-1.6.0-Source/log/: latest_list
omplapp-1.6.0-Source/ompl/doc/markdown/: releaseNotes.md
omplapp-1.6.0-Source/ompl/py-bindings/ompl/: bindings_generator.py
omplapp-1.6.0-Source/ompl/tests/resources/ppm/: ._floor.ppm
omplapp-1.6.0-Source/ompl_gui/: CMakeLists.txt
omplapp-1.6.0-Source/ompl_gui/include/: BoundsBox.h  BoundsWidget.h  ControlPlannerWidget.h  GLViewer.h  GeometricPlannerWidget.h  LogOutputHandler.h  MainWidget.h  MainWindow.h  PlannerHelperWidget.h  PlannerLists.h  PlannerParameterHelper.h  PlannerRegistry.h  PlannerWidget.h  Pose2DBox.h  Pose3DBox.h  ProblemWidget.h  SolveWidget.h
omplapp-1.6.0-Source/ompl_gui/src/: BoundsBox.cpp  BoundsWidget.cpp  ControlPlannerWidget.cpp  GLViewer.cpp  GeometricPlannerWidget.cpp  LogOutputHandler.cpp  MainWidget.cpp  MainWindow.cpp  PlannerHelperWidget.cpp  PlannerParameterHelper.cpp  PlannerRegistry.cpp  PlannerWidget.cpp  Pose2DBox.cpp  Pose3Dbox.cpp  ProblemWidget.cpp  SolveWidget.cpp  main.cpp
omplapp-1.6.0-Source/resources/models/panda_description/urdf/: panda1.urdf
omplapp-1.6.0-Source/src/omplapp/: CMakeLists.txt
omplapp-1.6.0-Source/src/omplapp/apps/: ManipulatorPlanning.cpp  ManipulatorPlanning.h
omplapp-1.6.0-Source/src/omplapp/apps/detail/: appUtil.cpp
omplapp-1.6.0-Source/src/omplapp/apps/graphical/: GManipulatorPlanning.h
omplapp-1.6.0-Source/src/omplapp/apps/manipulator/: PinocchioManipulatorPlanning.cpp  PinocchioManipulatorPlanning.h  PinocchioManipulatorStateValidityChecker.cpp  PinocchioManipulatorStateValidityChecker.h  RobotModel.cpp  RobotModel.h  main.cpp
omplapp-1.6.0-Source/src/omplapp/geometry/: RigidBodyGeometry.cpp  RigidBodyGeometry.h
